# ClovaLink

./: CHANGELOG.md  LICENSE  README.md  install.sh
.github/workflows/: docker-publish.yml
backend/crates/ai/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: comments.rs  discord.rs  main.rs  search.rs  sharing.rs
backend/crates/auth/: Cargo.toml
backend/crates/core/: Cargo.toml
backend/crates/core/src/: mailer.rs  models.rs
backend/crates/extensions/: Cargo.toml
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs
docs/wiki/: Security.md
frontend/src/context/: AuthContext.tsx
infra/: compose.build.yml  compose.yml
